--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -77,6 +77,7 @@ body * {
 background: var(--surface-color);
 /* stroke-color-light-mode */
 border: 1px solid var(--stroke-color);
+-webkit-backdrop-filter: blur 4px;
 backdrop-filter: blur 4px;
 border-radius: 9999px;
 }
@@ -103,7 +104,8 @@ ul li a {
   text-decoration: none;
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur 4px;
+  -webkit-backdrop-filter: blur 4px;
   /* Note: backdrop-filter has minimal browser support */
   border-radius: 8px;
   font-weight: bold;
