--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -31,7 +31,8 @@ body * {
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 560px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
