--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -141,7 +141,7 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-  background: var(--highlight-color-light);
+  background: var(--stroke-color);
 }
 footer {
   text-align: center;
